--- a/www/templates/ASPAC.html
+++ b/www/templates/ASPAC.html
@@ -1,13 +1,13 @@
-<ion-view view-title="EU">
+<ion-view view-title="ASPAC">
 	<ion-content>
 	<label class="item item-input">
 				<i class="icon ion-search placeholder-icon"></i>
 				<input type="search" id="search-criteria" placeholder="Search" ng-model="search.$">
 			</label>
 		<ion-list>
-			<ion-item class="item-text-wrap" ng-repeat="office in offices|filter:{LocRegion:'EU'}">
+			<ion-item class="item-text-wrap" ng-repeat="office in offices|filter:{LocRegion:'ASPAC'}">
 				<h3 id="LocName">{{office.LocationName}}</h3>
-				<p id="details">{{office.LocAddressLine1 + ", " + office.LocAddressLine2 + ", " + office.LocCity + ", " + office.LocCountryDescription + ", " + office.LocZipPostalCode</p>
+				<p id="details">{{office.LocAddressLine1 + ", " + office.LocAddressLine2 + ", " + office.LocCity + ", " + office.LocCountryDescription + ", " + office.LocZipPostalCode}}</p>
 			</ion-item>
 		</ion-list>
 	</ion-content>
