--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -2,25 +2,28 @@
 <ion-view view-title="Regions">
 	<ion-content>
 		<ion-list id="item">
-			<ion-item ui-sref="app.EU">
+		<ion-item ui-sref="ALL">
+				<p>ALL</p>
+			</ion-item>
+			<ion-item ui-sref="region/:id">
 				<p>EU</p>
 			</ion-item>
-			<ion-item href="#">
+			<ion-item ui-sref="ASPAC">
 				<p>ASPAC</p>
 			</ion-item>
-			<ion-item ui-sref="app.USCAN">
+			<ion-item ui-sref="USCAN">
 				<p>USCAN</p>
 			</ion-item>
-			<ion-item href="#">
+			<ion-item ui-sref="EAGM">
 				<p>EAGM</p>
 			</ion-item>
-			<ion-item href="#">
+			<ion-item ui-sref="LATAM">
 				<p>LATAM</p>
 			</ion-item>
-			<ion-item href="#">
+			<ion-item ui-sref="CHINA">
 				<p>CHINA</p>
 			</ion-item>
-			<ion-item href="#">
+			<ion-item ui-sref="INDIA">
 				<p>INDIA</p>
 			</ion-item>
 		</ion-list>
