--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,3 +15,11 @@
 #details{
 	text-align: center;
 }
+.selectable{
+	-webkit-user-select: auto !important;
+    -khtml-user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    -o-user-select: auto !important;
+    user-select: auto !important;
+}
