--- a/www/templates/ASPAC.html
+++ b/www/templates/ASPAC.html
@@ -2,10 +2,10 @@
 	<ion-content>
 	<label class="item item-input">
 				<i class="icon ion-search placeholder-icon"></i>
-				<input type="search" id="search-criteria" placeholder="Search" ng-model="search.$">
+				<input type="search" id="search-criteria" placeholder="Search" ng-model="query[queryBy]">
 			</label>
 		<ion-list>
-			<ion-item class="item-text-wrap" ng-repeat="office in offices|filter:{LocRegion:'ASPAC'}">
+			<ion-item class="item-text-wrap" collection-repeat="office in offices|filter:{LocRegion:'ASPAC'}|filter:query">
 				<h3 id="LocName">{{office.LocationName}}</h3>
 				<p id="details">{{office.LocAddressLine1 + ", " + office.LocAddressLine2 + ", " + office.LocCity + ", " + office.LocCountryDescription + ", " + office.LocZipPostalCode}}</p>
 			</ion-item>
