--- a/www/templates/LATAM.html
+++ b/www/templates/LATAM.html
@@ -5,7 +5,7 @@
 				<input type="search" id="search-criteria" placeholder="Search" ng-model="query[queryBy]">
 			</label>
 		<ion-list>
-			<ion-item class="item-text-wrap" ng-repeat="office in offices|filter:{LocRegion:'LATAM'}|filter:query">
+			<ion-item class="item-text-wrap" collection-repeat="office in offices|filter:{LocRegion:'LATAM'}|filter:query">
 				<h3 id="LocName">{{office.LocationName}}</h3>
 				<p id="details">{{office.LocAddressLine1 + ", " + office.LocAddressLine2 + ", " + office.LocCity + ", " + office.LocCountryDescription + ", " + office.LocZipPostalCode}}</p>
 			</ion-item>
