--- a/www/templates/all.html
+++ b/www/templates/all.html
@@ -1,11 +1,13 @@
 <ion-view view-title="All Offices">
-	<ion-content>
+	<ion-content overflow-scroll="true">
+	<!-- search field, uses the query model and filter with ng-repeat -->
 	<label class="item item-input">
 				<i class="icon ion-search placeholder-icon"></i>
-				<input type="search" id="search-criteria" placeholder="Search" ng-model="search.$">
+				<input type="search" id="search-criteria" placeholder="Search" ng-model="query[queryBy]">
 			</label>
 		<ion-list>
-			<ion-item class="item-text-wrap" ng-repeat="office in offices">
+		<!-- office list populated from api call in controller -->
+			<ion-item class="item-text-wrap selectable" collection-repeat="office in offices|filter:query">
 				<h3 id="LocName">{{office.LocationName}}</h3>
 				<p id="details">{{office.LocAddressLine1 + ", " + office.LocAddressLine2 + ", " + office.LocCity + ", " + office.LocCountryDescription + ", " + office.LocZipPostalCode}}</p>
 			</ion-item>
